<resources>
    <string name="app_name">Biblioteka gier planszowych</string>
    <string name="title_home">Autorzy</string>
    <string name="title_dashboard">Gry</string>
    <string name="title_notifications">Konto</string>
    <string name="cdv">Collegium Da Vinci</string>
    <string name="authors">Autorzy:</string>
    <string name="author_1">Konrad Robaszyński</string>
    <string name="author_2">Mikołaj Muszyński</string>
    <string name="descriptionHeader">Opis:</string>
    <string name="description">Jest to program, który ma pomóc w zarządzaniu domową biblioteczką gier planszowych</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="accountCheckCreate">Zaloguj/Stwórz</string>
    <string name="addNewGame">Dodaj nową grę</string>
    <string name="gameDetail_heading">Gra - szczegóły</string>
    <string name="gameDetail_titleLabel">Tytuł</string>
    <string name="gameDetail_titleHint">wpisz tytuł</string>
    <string name="gameDetail_descriptionLabel">Opis i recenzja</string>
    <string name="gameDetail_descriptionHint">wpisz opis</string>
    <string name="gameDetail_localizationLabel">Lokalizacja</string>
    <string name="gameDetail_localizationHint">gdzie jest gra?</string>
    <string name="gameDetail_buttonSve">ZAPISZ</string>
    <string name="gameDetail_buttonDelete">USUŃ GRĘ</string>
    <string name="gameDetail_deleteCheckbox">Chce usunąć grę</string>
</resources>
